build: обновление зависимостей и конфигурации Docker
Добавлена библиотека `pytz`, обновлены файлы `Dockerfile`, `docker-compose.yaml` и `.gitignore`. Исправлены пути для логирования и настроек, добавлены новые монтируемые директории в `docker-compose.yaml`

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,4 +3,7 @@ services:
     build:
       context: .
     volumes:
-      - /data:/app/data
+      - ./data:/app/data
+      - ./log/archive:/app/log/archive
+      - ./settings.py:/app/settings.py:ro
+      - ./credentials.json:/app/credentials.json:ro
