--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 description = ""
 requires-python = ">=3.13"
 dependencies = [
-    "aiogram>=3.20.0.post0",
+    "aiogram-dialog>=2.4.0",
     "apscheduler>=3.11.0",
     "gspread-asyncio>=2.0.0",
     "pytz>=2025.2",
